--- a/app/src/main/res/drawable/bg_white_5.xml
+++ b/app/src/main/res/drawable/bg_white_5.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/colorGreen"/>
+    <solid android:color="@color/colorWhite"/>
 
-    <corners android:radius="@dimen/size_10"/>
+    <corners android:radius="@dimen/size_5"/>
 
 </shape>
