--- a/app/src/main/res/layout/alert_dialog.xml
+++ b/app/src/main/res/layout/alert_dialog.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="15dp"
-    android:background="@drawable/bg_white_10"
+    android:background="@drawable/bg_white_5"
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
@@ -38,7 +38,7 @@
         android:paddingTop="7dp"
         android:paddingBottom="7dp"
         android:textColor="@color/colorBlack"
-        android:background="@drawable/bg_light_red_10"
+        android:background="@drawable/bg_light_red_5"
         android:layout_marginTop="15dp"
         android:text="OK"
         android:fontFamily="@font/regular"
