--- a/app/src/main/res/layout/fragment_doner.xml
+++ b/app/src/main/res/layout/fragment_doner.xml
@@ -14,7 +14,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/size_10"
+            android:layout_marginTop="@dimen/size_10"
+            android:layout_marginStart="@dimen/size_10"
+            android:layout_marginEnd="@dimen/size_10"
             android:orientation="horizontal">
 
             <ImageView
@@ -37,8 +39,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingStart="@dimen/size_10"
-            android:paddingEnd="@dimen/size_10"
             android:orientation="horizontal">
 
             <TextView
@@ -47,7 +47,11 @@
                 android:layout_height="@dimen/size_40"
                 android:layout_weight="1"
                 android:layout_marginEnd="@dimen/size_5"
-                android:background="@drawable/storke_grey_5"
+                android:layout_marginStart="@dimen/size_10"
+                android:layout_marginBottom="@dimen/size_5"
+                android:layout_marginTop="@dimen/size_5"
+                android:background="@drawable/bg_light_grey_5"
+                android:elevation="3dp"
                 android:gravity="center"
                 android:fontFamily="@font/regular"
                 android:textColor="@color/colorGrey"
@@ -59,9 +63,9 @@
                 android:layout_width="0dp"
                 android:layout_height="@dimen/size_40"
                 android:layout_weight="1"
-                android:layout_marginStart="@dimen/size_5"
-                android:layout_marginEnd="@dimen/size_5"
-                android:background="@drawable/storke_grey_5"
+                android:layout_margin="@dimen/size_5"
+                android:background="@drawable/bg_light_grey_5"
+                android:elevation="3dp"
                 android:gravity="center"
                 android:fontFamily="@font/regular"
                 android:textColor="@color/colorGrey"
@@ -73,9 +77,9 @@
                 android:layout_width="0dp"
                 android:layout_height="@dimen/size_40"
                 android:layout_weight="1"
-                android:layout_marginStart="@dimen/size_5"
-                android:layout_marginEnd="@dimen/size_5"
-                android:background="@drawable/storke_grey_5"
+                android:layout_margin="@dimen/size_5"
+                android:background="@drawable/bg_light_grey_5"
+                android:elevation="3dp"
                 android:gravity="center"
                 android:fontFamily="@font/regular"
                 android:textColor="@color/colorGrey"
@@ -87,8 +91,12 @@
                 android:layout_width="0dp"
                 android:layout_height="@dimen/size_40"
                 android:layout_weight="1"
+                android:layout_marginTop="@dimen/size_5"
                 android:layout_marginStart="@dimen/size_5"
-                android:background="@drawable/storke_grey_5"
+                android:layout_marginBottom="@dimen/size_5"
+                android:layout_marginEnd="@dimen/size_10"
+                android:background="@drawable/bg_light_grey_5"
+                android:elevation="3dp"
                 android:gravity="center"
                 android:fontFamily="@font/regular"
                 android:textColor="@color/colorGrey"
@@ -100,10 +108,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/size_10"
-            android:layout_marginBottom="@dimen/size_10"
-            android:paddingStart="@dimen/size_10"
-            android:paddingEnd="@dimen/size_10"
             android:orientation="horizontal">
 
             <TextView
@@ -112,7 +116,11 @@
                 android:layout_height="@dimen/size_40"
                 android:layout_weight="1"
                 android:layout_marginEnd="@dimen/size_5"
-                android:background="@drawable/storke_grey_5"
+                android:layout_marginStart="@dimen/size_10"
+                android:layout_marginBottom="@dimen/size_10"
+                android:layout_marginTop="@dimen/size_5"
+                android:background="@drawable/bg_light_grey_5"
+                android:elevation="3dp"
                 android:gravity="center"
                 android:fontFamily="@font/regular"
                 android:textColor="@color/colorGrey"
@@ -124,9 +132,12 @@
                 android:layout_width="0dp"
                 android:layout_height="@dimen/size_40"
                 android:layout_weight="1"
-                android:layout_marginStart="@dimen/size_5"
                 android:layout_marginEnd="@dimen/size_5"
-                android:background="@drawable/storke_grey_5"
+                android:layout_marginStart="@dimen/size_5"
+                android:layout_marginBottom="@dimen/size_10"
+                android:layout_marginTop="@dimen/size_5"
+                android:background="@drawable/bg_light_grey_5"
+                android:elevation="3dp"
                 android:gravity="center"
                 android:fontFamily="@font/regular"
                 android:textColor="@color/colorGrey"
@@ -138,9 +149,12 @@
                 android:layout_width="0dp"
                 android:layout_height="@dimen/size_40"
                 android:layout_weight="1"
-                android:layout_marginStart="@dimen/size_5"
                 android:layout_marginEnd="@dimen/size_5"
-                android:background="@drawable/storke_grey_5"
+                android:layout_marginStart="@dimen/size_5"
+                android:layout_marginBottom="@dimen/size_10"
+                android:layout_marginTop="@dimen/size_5"
+                android:background="@drawable/bg_light_grey_5"
+                android:elevation="3dp"
                 android:gravity="center"
                 android:fontFamily="@font/regular"
                 android:textColor="@color/colorGrey"
@@ -152,8 +166,12 @@
                 android:layout_width="0dp"
                 android:layout_height="@dimen/size_40"
                 android:layout_weight="1"
+                android:layout_marginEnd="@dimen/size_10"
                 android:layout_marginStart="@dimen/size_5"
-                android:background="@drawable/storke_grey_5"
+                android:layout_marginBottom="@dimen/size_10"
+                android:layout_marginTop="@dimen/size_5"
+                android:background="@drawable/bg_light_grey_5"
+                android:elevation="3dp"
                 android:gravity="center"
                 android:fontFamily="@font/regular"
                 android:textColor="@color/colorGrey"
