--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -52,9 +52,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/size_5"
-                android:paddingStart="@dimen/size_15"
-                android:paddingEnd="@dimen/size_15"
                 android:orientation="horizontal">
 
                 <TextView
@@ -63,7 +60,11 @@
                     android:layout_height="@dimen/size_40"
                     android:layout_weight="1"
                     android:layout_marginEnd="@dimen/size_5"
-                    android:background="@drawable/storke_grey_5"
+                    android:layout_marginStart="@dimen/size_15"
+                    android:layout_marginTop="@dimen/size_5"
+                    android:layout_marginBottom="@dimen/size_5"
+                    android:background="@drawable/bg_white_5"
+                    android:elevation="3dp"
                     android:gravity="center"
                     android:fontFamily="@font/regular"
                     android:textColor="@color/colorGrey"
@@ -77,7 +78,10 @@
                     android:layout_weight="1"
                     android:layout_marginStart="@dimen/size_5"
                     android:layout_marginEnd="@dimen/size_5"
-                    android:background="@drawable/storke_grey_5"
+                    android:layout_marginTop="@dimen/size_5"
+                    android:layout_marginBottom="@dimen/size_5"
+                    android:background="@drawable/bg_white_5"
+                    android:elevation="3dp"
                     android:gravity="center"
                     android:fontFamily="@font/regular"
                     android:textColor="@color/colorGrey"
@@ -91,7 +95,10 @@
                     android:layout_weight="1"
                     android:layout_marginStart="@dimen/size_5"
                     android:layout_marginEnd="@dimen/size_5"
-                    android:background="@drawable/storke_grey_5"
+                    android:layout_marginTop="@dimen/size_5"
+                    android:layout_marginBottom="@dimen/size_5"
+                    android:background="@drawable/bg_white_5"
+                    android:elevation="3dp"
                     android:gravity="center"
                     android:fontFamily="@font/regular"
                     android:textColor="@color/colorGrey"
@@ -104,7 +111,11 @@
                     android:layout_height="@dimen/size_40"
                     android:layout_weight="1"
                     android:layout_marginStart="@dimen/size_5"
-                    android:background="@drawable/storke_grey_5"
+                    android:layout_marginTop="@dimen/size_5"
+                    android:layout_marginBottom="@dimen/size_5"
+                    android:layout_marginEnd="@dimen/size_15"
+                    android:background="@drawable/bg_white_5"
+                    android:elevation="3dp"
                     android:gravity="center"
                     android:fontFamily="@font/regular"
                     android:textColor="@color/colorGrey"
@@ -116,10 +127,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/size_10"
                 android:layout_marginBottom="@dimen/size_10"
-                android:paddingStart="@dimen/size_15"
-                android:paddingEnd="@dimen/size_15"
                 android:orientation="horizontal">
 
                 <TextView
@@ -128,7 +136,11 @@
                     android:layout_height="@dimen/size_40"
                     android:layout_weight="1"
                     android:layout_marginEnd="@dimen/size_5"
-                    android:background="@drawable/storke_grey_5"
+                    android:layout_marginTop="@dimen/size_10"
+                    android:layout_marginStart="@dimen/size_15"
+                    android:layout_marginBottom="@dimen/size_5"
+                    android:background="@drawable/bg_white_5"
+                    android:elevation="3dp"
                     android:gravity="center"
                     android:fontFamily="@font/regular"
                     android:textColor="@color/colorGrey"
@@ -140,9 +152,12 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/size_40"
                     android:layout_weight="1"
+                    android:layout_marginTop="@dimen/size_10"
                     android:layout_marginStart="@dimen/size_5"
                     android:layout_marginEnd="@dimen/size_5"
-                    android:background="@drawable/storke_grey_5"
+                    android:layout_marginBottom="@dimen/size_5"
+                    android:background="@drawable/bg_white_5"
+                    android:elevation="3dp"
                     android:gravity="center"
                     android:fontFamily="@font/regular"
                     android:textColor="@color/colorGrey"
@@ -156,7 +171,10 @@
                     android:layout_weight="1"
                     android:layout_marginStart="@dimen/size_5"
                     android:layout_marginEnd="@dimen/size_5"
-                    android:background="@drawable/storke_grey_5"
+                    android:layout_marginTop="@dimen/size_10"
+                    android:layout_marginBottom="@dimen/size_5"
+                    android:background="@drawable/bg_white_5"
+                    android:elevation="3dp"
                     android:gravity="center"
                     android:fontFamily="@font/regular"
                     android:textColor="@color/colorGrey"
@@ -169,7 +187,11 @@
                     android:layout_height="@dimen/size_40"
                     android:layout_weight="1"
                     android:layout_marginStart="@dimen/size_5"
-                    android:background="@drawable/storke_grey_5"
+                    android:layout_marginEnd="@dimen/size_15"
+                    android:layout_marginTop="@dimen/size_10"
+                    android:layout_marginBottom="@dimen/size_5"
+                    android:background="@drawable/bg_white_5"
+                    android:elevation="3dp"
                     android:gravity="center"
                     android:fontFamily="@font/regular"
                     android:textColor="@color/colorGrey"
@@ -240,17 +262,18 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/size_5"
-                android:paddingStart="@dimen/size_15"
-                android:paddingEnd="@dimen/size_15"
                 android:orientation="horizontal">
 
                 <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="@dimen/size_40"
                     android:layout_weight="1"
+                    android:layout_marginStart="@dimen/size_15"
+                    android:layout_marginTop="@dimen/size_5"
+                    android:layout_marginBottom="@dimen/size_5"
                     android:layout_marginEnd="@dimen/size_5"
-                    android:background="@drawable/storke_grey_5">
+                    android:background="@drawable/bg_white_5"
+                    android:elevation="3dp">
 
                     <Spinner
                         android:id="@+id/date"
@@ -264,9 +287,9 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/size_40"
                     android:layout_weight="1"
-                    android:layout_marginStart="@dimen/size_5"
-                    android:layout_marginEnd="@dimen/size_5"
-                    android:background="@drawable/storke_grey_5">
+                    android:layout_margin="@dimen/size_5"
+                    android:background="@drawable/bg_white_5"
+                    android:elevation="3dp">
 
                     <Spinner
                         android:id="@+id/month"
@@ -281,7 +304,11 @@
                     android:layout_height="@dimen/size_40"
                     android:layout_weight="1"
                     android:layout_marginStart="@dimen/size_5"
-                    android:background="@drawable/storke_grey_5">
+                    android:layout_marginTop="@dimen/size_5"
+                    android:layout_marginEnd="@dimen/size_15"
+                    android:layout_marginBottom="@dimen/size_5"
+                    android:background="@drawable/bg_white_5"
+                    android:elevation="3dp">
 
                     <Spinner
                         android:id="@+id/year"
@@ -297,7 +324,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/bold"
-                android:layout_marginTop="@dimen/size_20"
+                android:layout_marginTop="@dimen/size_15"
                 android:layout_marginStart="@dimen/size_15"
                 android:textColor="@color/colorDarkGrey"
                 android:textSize="@dimen/small_text"
@@ -306,9 +333,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/size_5"
-                android:paddingStart="@dimen/size_15"
-                android:paddingEnd="@dimen/size_15"
                 android:orientation="horizontal">
 
                 <TextView
@@ -316,8 +340,12 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/size_40"
                     android:layout_weight="1"
+                    android:layout_marginStart="@dimen/size_15"
+                    android:layout_marginTop="@dimen/size_5"
                     android:layout_marginEnd="@dimen/size_5"
-                    android:background="@drawable/storke_grey_5"
+                    android:layout_marginBottom="@dimen/size_5"
+                    android:background="@drawable/bg_white_5"
+                    android:elevation="3dp"
                     android:gravity="center"
                     android:fontFamily="@font/regular"
                     android:textColor="@color/colorGrey"
@@ -329,9 +357,9 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/size_40"
                     android:layout_weight="1"
-                    android:layout_marginStart="@dimen/size_5"
-                    android:layout_marginEnd="@dimen/size_5"
-                    android:background="@drawable/storke_grey_5"
+                    android:layout_margin="@dimen/size_5"
+                    android:background="@drawable/bg_white_5"
+                    android:elevation="3dp"
                     android:gravity="center"
                     android:fontFamily="@font/regular"
                     android:textColor="@color/colorGrey"
@@ -343,9 +371,9 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/size_40"
                     android:layout_weight="1"
-                    android:layout_marginStart="@dimen/size_5"
-                    android:layout_marginEnd="@dimen/size_5"
-                    android:background="@drawable/storke_grey_5"
+                    android:layout_margin="@dimen/size_5"
+                    android:background="@drawable/bg_white_5"
+                    android:elevation="3dp"
                     android:gravity="center"
                     android:fontFamily="@font/regular"
                     android:textColor="@color/colorGrey"
@@ -357,8 +385,12 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/size_40"
                     android:layout_weight="1"
+                    android:layout_marginEnd="@dimen/size_15"
+                    android:layout_marginTop="@dimen/size_5"
                     android:layout_marginStart="@dimen/size_5"
-                    android:background="@drawable/storke_grey_5"
+                    android:layout_marginBottom="@dimen/size_5"
+                    android:background="@drawable/bg_white_5"
+                    android:elevation="3dp"
                     android:gravity="center"
                     android:fontFamily="@font/regular"
                     android:textColor="@color/colorGrey"
@@ -371,7 +403,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/bold"
-                android:layout_marginTop="@dimen/size_20"
+                android:layout_marginTop="@dimen/size_15"
                 android:layout_marginStart="@dimen/size_15"
                 android:textColor="@color/colorDarkGrey"
                 android:textSize="@dimen/small_text"
