--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,33 +22,6 @@
             android:text="@string/app_name_bangla"
             android:layout_gravity="center_horizontal"/>
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/size_50"
-            android:background="@drawable/bg_light_grey_5"
-            android:layout_marginTop="@dimen/size_15"
-            android:paddingStart="@dimen/size_15"
-            android:fontFamily="@font/regular"
-            android:layout_marginStart="@dimen/size_15"
-            android:layout_marginEnd="@dimen/size_15"
-            android:paddingEnd="@dimen/size_5"
-            android:textSize="@dimen/small_text"
-            android:textColor="@color/colorBlack"
-            android:hint="Search for a donor"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/size_45"
-            android:layout_marginTop="@dimen/size_10"
-            android:background="@drawable/bg_green_5"
-            android:layout_marginStart="@dimen/size_15"
-            android:layout_marginEnd="@dimen/size_15"
-            android:gravity="center"
-            android:textColor="@color/colorDarkGrey"
-            android:textSize="@dimen/small_text"
-            android:fontFamily="@font/bold"
-            android:text="Search"/>
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -77,13 +50,19 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/colorLightRed"
+                    android:textColor="@color/colorGrey"
                     android:textSize="@dimen/normal_text"
                     android:text="No Request Available"
                     android:fontFamily="@font/bold"
                     android:layout_marginTop="@dimen/size_10"/>
 
             </LinearLayout>
+
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true" />
 
         </RelativeLayout>
 
